# AoC-2021

./: CMakeLists.txt  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_19_working  day_2.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_24.cpp  day_24_working  day_3.cpp  day_3_correct_output  day_4.cpp  day_4_correct_output  day_5.cpp  day_6.cpp  day_6_correct_output  day_7.cpp  day_8.cpp  day_8_correct_output  day_9.cpp  input_19_test
