cmake_minimum_required(VERSION 3.20)
project(AoC_2021)

set(CMAKE_CXX_STANDARD 20)

configure_file(input_1 input_1 COPYONLY)
add_executable(AoC_2021_day_1 day_1.cpp)

configure_file(input_2 input_2 COPYONLY)
add_executable(AoC_2021_day_2 day_2.cpp)

configure_file(input_3 input_3 COPYONLY)
add_executable(AoC_2021_day_3 day_3.cpp)

configure_file(input_4 input_4 COPYONLY)
add_executable(AoC_2021_day_4 day_4.cpp)

configure_file(input_5 input_5 COPYONLY)
add_executable(AoC_2021_day_5 day_5.cpp)

configure_file(input_6 input_6 COPYONLY)
add_executable(AoC_2021_day_6 day_6.cpp)

configure_file(input_7 input_7 COPYONLY)
add_executable(AoC_2021_day_7 day_7.cpp)

configure_file(input_8 input_8 COPYONLY)
configure_file(input_8_test input_8_test COPYONLY)
add_executable(AoC_2021_day_8 day_8.cpp)

configure_file(input_9 input_9 COPYONLY)
add_executable(AoC_2021_day_9 day_9.cpp)

configure_file(input_10 input_10 COPYONLY)
add_executable(AoC_2021_day_10 day_10.cpp)

configure_file(input_11 input_11 COPYONLY)
add_executable(AoC_2021_day_11 day_11.cpp)

configure_file(input_12 input_12 COPYONLY)
configure_file(input_12_test input_12_test COPYONLY)
add_executable(AoC_2021_day_12 day_12.cpp)

configure_file(input_13 input_13 COPYONLY)
configure_file(input_13_test input_13_test COPYONLY)
add_executable(AoC_2021_day_13 day_13.cpp)

configure_file(input_14 input_14 COPYONLY)
configure_file(input_14_test input_14_test COPYONLY)
add_executable(AoC_2021_day_14 day_14.cpp)

configure_file(input_15 input_15 COPYONLY)
add_executable(AoC_2021_day_15 day_15.cpp)

configure_file(input_16 input_16 COPYONLY)
configure_file(input_16_test input_16_test COPYONLY)
add_executable(AoC_2021_day_16 day_16.cpp)

configure_file(input_17 input_17 COPYONLY)
add_executable(AoC_2021_day_17 day_17.cpp)

configure_file(input_18 input_18 COPYONLY)
configure_file(input_18_test input_18_test COPYONLY)
add_executable(AoC_2021_day_18 day_18.cpp)

configure_file(input_19 input_19 COPYONLY)
configure_file(input_19_test input_19_test COPYONLY)
add_executable(AoC_2021_day_19 day_19.cpp)

configure_file(input_20 input_20 COPYONLY)
configure_file(input_20_test input_20_test COPYONLY)
add_executable(AoC_2021_day_20 day_20.cpp)

configure_file(input_21 input_21 COPYONLY)
add_executable(AoC_2021_day_21 day_21.cpp)